Fixed naming in files and components. Refactoring. Client side posts' comments' logic done.Got rid of hash routing, now sending index.html as response to unknown requests, so server can handle for example route '... .com/post/1234' (Basically refreshing the page on any route is working)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ server/node_modules
 .DS_Store
 client/app/**/*.js
 client/app/**/*.js.map
+client/dist
 !client/app/util/apiCaller.js
 !client/app/util/dateLocal.js
 server/config/**/*.js
+npm-debug.log
