--- a/client/package.json
+++ b/client/package.json
@@ -31,13 +31,15 @@
     "zone.js": "^0.6.21"
   },
   "devDependencies": {
+    "canonical-path": "0.0.2",
     "concurrently": "^3.0.0",
+    "http-server": "^0.9.0",
     "lite-server": "^2.2.2",
+    "lodash": "^4.11.1",
+    "ts-loader": "^2.0.0",
+    "tslint": "^4.0.2",
     "typescript": "^2.0.3",
     "typings": "^2.0.0",
-    "canonical-path": "0.0.2",
-    "http-server": "^0.9.0",
-    "tslint": "^4.0.2",
-    "lodash": "^4.11.1"
+    "webpack": "^2.2.1"
   }
 }
