--- a/client/package.json
+++ b/client/package.json
@@ -1,45 +1,45 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
-  "main": "server.js",
+  "name": "Blog",
+  "version": "0.0.1",
+  "description": "Rewriting blog to use webpack",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "lint": "tslint ./app/**/*.ts -t verbose",
-    "lite": "lite-server",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings install"
+    "start": "webpack-dev-server --inline --hot --progress --port 8080",
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail"
   },
+  "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.2.0",
-    "@angular/compiler": "2.2.0",
-    "@angular/core": "2.2.0",
-    "@angular/forms": "2.2.0",
-    "@angular/http": "2.2.0",
-    "@angular/platform-browser": "2.2.0",
-    "@angular/platform-browser-dynamic": "2.2.0",
-    "@angular/router": "3.2.0",
-    "@angular/upgrade": "2.2.0",
-    "angular2-jwt": "^0.1.25",
-    "auth0-lock": "^10.6.1",
-    "bootstrap": "^3.3.7",
+    "@angular/common": "~2.4.0",
+    "@angular/compiler": "~2.4.0",
+    "@angular/core": "~2.4.0",
+    "@angular/forms": "~2.4.0",
+    "@angular/http": "~2.4.0",
+    "@angular/platform-browser": "~2.4.0",
+    "@angular/platform-browser-dynamic": "~2.4.0",
+    "@angular/router": "~3.4.0",
+    "angular2-jwt": "^0.1.28",
     "core-js": "^2.4.1",
-    "isomorphic-fetch": "^2.2.1",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.41",
-    "zone.js": "^0.6.21"
+    "rxjs": "5.0.1",
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "canonical-path": "0.0.2",
-    "concurrently": "^3.0.0",
-    "http-server": "^0.9.0",
-    "lite-server": "^2.2.2",
-    "lodash": "^4.11.1",
-    "ts-loader": "^2.0.0",
-    "tslint": "^4.0.2",
-    "typescript": "^2.0.3",
-    "typings": "^2.0.0",
-    "webpack": "^2.2.1"
+    "@angularclass/hmr": "^1.2.2",
+    "@angularclass/hmr-loader": "^3.0.2",
+    "@types/node": "^6.0.45",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "2.0.0-beta.5",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.16.1",
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.7",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.2",
+    "style-loader": "^0.13.1",
+    "typescript": "~2.0.10",
+    "webpack": "2.2.0",
+    "webpack-dev-server": "2.2.0-rc.0",
+    "webpack-merge": "^2.4.0"
   }
 }
