--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
-    "nodemon": "1.10.0"
+    "nodemon": "1.10.0",
+    "webpack": "^2.2.1"
   },
   "engines": {
     "node": ">=4"
