--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-client/node_modules
-server/node_modules
 .idea
 .vscode/
 .DS_Store
+
+server/config/**/*.js
+server/node_modules
+server/dist/
+
+client/node_modules
 client/src/**/*.js
 client/src/**/*.js.map
 client/dist
-server/config/**/*.js
+
 npm-debug.log
-server/dist/server-bundle.js
