--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .vscode/
 .DS_Store
 
-server/config/**/*.js
+server/src/**/*.js
 server/node_modules
 server/dist/
 
@@ -10,5 +10,6 @@ client/node_modules
 client/src/**/*.js
 client/src/**/*.js.map
 client/dist
+!client/src/assets/langs/ru.js
 
 npm-debug.log
