--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "core-js": "^2.4.1",
     "material": "^0.1.1",
     "rxjs": "5.0.1",
+    "tinymce": "^4.5.4",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
