--- a/server/package.json
+++ b/server/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "blog",
-  "version": "0.0.1",
-  "description": "Blog",
+  "name": "blog_server_koa",
+  "version": "1.0.0",
+  "description": "Blog server-side",
+  "scripts": {
+    "build": "tsc --lib ES2015 src/server.ts",
+    "build:prod": "NODE_ENV=production ",
+    "start": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec NODE_ENV=development 'ts-node' src/server.ts",
+    "start:prod": "npm run build:prod && NODE_ENV=production node src/server.js"
+  },
+  "author": "Mark Piispanen",
+  "license": "ISC",
   "dependencies": {
-    "auth0": "^2.5.0",
-    "body-parser": "1.15.2",
-    "cors": "^2.8.1",
-    "express": "4.14.0",
-    "express-jwt": "^5.1.0",
-    "mongodb": "^2.2.11",
-    "mongoose": "4.5.8",
-    "request": "^2.79.0",
-    "sanitize-html": "^1.13.0",
-    "winston": "^2.3.0",
-    "xhr2": "^0.1.3"
+    "koa": "^2.0.1",
+    "koa-bodyparser": "^4.1.0",
+    "koa-cors": "0.0.16",
+    "koa-router": "^7.0.1",
+    "koa-send": "^3.3.0",
+    "koa-static": "^3.0.0",
+    "mongodb": "^2.2.24",
+    "sanitize-html": "^1.14.1"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
-    "nodemon": "1.10.0",
-    "webpack": "^2.2.1"
-  },
-  "engines": {
-    "node": ">=4"
-  },
-  "scripts": {
-    "start": "nodemon -x \"webpack --progress --colors && node\" --watch \"./src\" dist/server-bundle.js",
-    "build": "webpack --progress --colors"
-  },
-  "author": "Mark Piispanen"
+    "@types/koa": "^2.0.38",
+    "nodemon": "^1.11.0",
+    "ts-node": "^2.1.0",
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.1"
+  }
 }
