--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Mark Piispanen",
   "license": "ISC",
   "dependencies": {
+    "jsonwebtoken": "^7.3.0",
     "koa": "^2.0.1",
     "koa-bodyparser": "^4.1.0",
     "koa-cors": "0.0.16",
