--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Blog server-side",
   "scripts": {
     "build": "tsc --lib ES2015 src/server.ts",
-    "build:prod": "NODE_ENV=production ",
+    "build:prod": "NODE_ENV=production tsc",
     "start": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec NODE_ENV=development 'ts-node' src/server.ts",
     "start:prod": "npm run build:prod && NODE_ENV=production node src/server.js"
   },
