--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "build:dev": "cross-env NODE_ENV=development webpack --progress --hide-modules"
   },
   "dependencies": {
+    "autoprefixer": "^7.1.1",
     "vue": "^2.2.1",
     "vue-i18n": "^6.0.0",
     "vue-quill-editor": "^2.0.4",
