--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "koa": "^2.0.1",
     "koa-bodyparser": "^4.1.0",
     "koa-cors": "0.0.16",
+    "koa-jwt": "^3.2.2",
     "koa-router": "^7.0.1",
     "koa-send": "^3.3.0",
     "koa-static": "^3.0.0",
